Misc - fix to cta on mobile, adding readme and gitignore

--- a/styles.css
+++ b/styles.css
@@ -160,8 +160,9 @@ header {
     border-radius: var(--radius);
     padding: 3rem;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    gap: 1rem;
+    flex-direction: column;
+    align-items: start;
     color: var(--clr-neutral-500);
 }
 
@@ -209,6 +210,7 @@ footer {
     background-color: transparent;
     border-radius: var(--radius);
     cursor: pointer;
+    flex-shrink: 0;
 }
 
 .btn-outline:hover {
@@ -249,6 +251,9 @@ footer {
 
     .cta {
         padding: 3rem 6rem;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 }
 /* 768px */
